--- a/function.yml
+++ b/function.yml
@@ -7,6 +7,12 @@ functions:
     lang: deno-http
     handler: ./function
     image: austinrivas/deno-hello:latest
+    limits:
+      memory: 40Mi
+      cpu: 100m
+    requests:
+      memory: 20Mi
+      cpu: 100m
 configuration:
   templates:
     - name: deno-http
